# CPP_MLL

./: CMakeLists.txt  README.md
include/: perseptron.h  weights.h
source/: main.cpp  weights.cpp
